--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,18 @@ name = "rust_home"
 version = "0.1.0"
 authors = ["Acshi Haggenmiller <acshikh@gmail.com>"]
 
+[profile.dev]
+debug = true
+opt-level = 3
+
 [dependencies]
 rand = "0.3"
 iron = "0.5"
-urlencoded = "0.5"
 router = "0.5"
+handlebars-iron = "0.25"
+serde_json = "1.0"
+urlencoded = "0.5"
+config = "0.7"
+ring-pwhash = "0.11"
+chrono = "0.4"
+time = "0.1"
